--- a/index.css
+++ b/index.css
@@ -1,10 +1,6 @@
-* {
-  font-family: "Raleway", sans-serif;
-  padding: 0 10px;
-}
-
 body {
   padding: 0 70px;
+  font-family: "Raleway", sans-serif;
 }
 
 ul {
@@ -68,16 +64,28 @@ header {
   margin-bottom: 38px;
 }
 
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
 .container .hebergements {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
 .container .hebergements-marseille {
   background-color: #f2f2f2;
-  padding: 40px 64px;
+  padding: 40px 44px;
+  padding-right: 0 !important;
   border-radius: 24px;
+  grid-column: 1/3;
+  grid-row: 1;
+  height: fit-content;
 }
 
 .container .hebergements-marseille h2 {
@@ -96,8 +104,9 @@ header {
   background-color: white;
   padding: 4px;
   border-radius: 16px;
-  width: 280px;
+  width: 300px;
   height: auto;
+  margin-bottom: 48px;
 }
 
 .hebergement-item figure img {
@@ -105,8 +114,31 @@ header {
   width: 100%;
 }
 
+.hebergement-item figcaption {
+  padding: 8px;
+}
+
+.hebergements-marseille a {
+  font-size: 20px;
+  font-weight: 700;
+  margin-left: 50px;
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+}
+
 figcaption h4 {
   font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+figcaption p {
+  font-weight: 500;
+  margin-bottom: 8px;
+}
+
+.highlight {
   font-weight: 700;
 }
 
