--- a/index.css
+++ b/index.css
@@ -35,6 +35,15 @@ header {
   margin-bottom: 24px;
 }
 
+form.search i.fa {
+  background: #f2f2f2;
+  width: 40px;
+  height: 31px;
+  text-align: center;
+  line-height: 28px;
+  border-radius: 8px 0 0 8px;
+}
+
 .search .button {
   background-color: #0065fc;
   color: white;
@@ -48,6 +57,7 @@ header {
   padding: 6px 16px;
   border: solid 2px #f5f5f5;
   font-weight: 700;
+  margin-left: -4px;
 }
 
 .nb-logement i {
@@ -163,6 +173,10 @@ figcaption p {
 .room {
   width: 200px;
   height: 133px;
+}
+
+.plus-populaires {
+  background-color: #f2f2f2;
 }
 
 .populaires {
