--- a/index.css
+++ b/index.css
@@ -179,7 +179,7 @@ figcaption p {
 
 .plus-populaires {
   background-color: #f2f2f2;
-  padding: 40px 44px;
+  padding: 38px 44px;
   padding-bottom: 0;
   border-radius: 24px;
 }
@@ -236,6 +236,85 @@ figcaption p {
 .populaires {
   width: 200px;
   height: 150px;
+}
+
+.activites-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.activites-marseille h2 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 24px;
+}
+
+.vieux-port {
+  margin-right: 34px;
+  background-color: white;
+  height: fit-content;
+  border-radius: 16px;
+  margin-bottom: 48px;
+  box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.fort {
+  margin-right: 34px;
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 16px;
+  margin-bottom: 48px;
+  box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
+}
+
+.iles {
+  margin-right: 34px;
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 16px;
+  margin-bottom: 48px;
+  box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
+}
+
+.notre-dame {
+  margin-right: 34px;
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 16px;
+  margin-bottom: 48px;
+  box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
+}
+
+.parc {
+  margin-right: 34px;
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 16px;
+  margin-bottom: 48px;
+  box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
+}
+
+.calanques {
+  margin-right: 34px;
+  background-color: white;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 16px;
+  margin-bottom: 48px;
+  box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
+}
+
+.activite-item img {
+  width: 100%;
+  border-radius: 16px 16px 0 0;
 }
 
 footer {
