--- a/index.css
+++ b/index.css
@@ -3,6 +3,11 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
+.container-page {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 ul {
   list-style: none;
 }
@@ -250,6 +255,29 @@ figcaption p {
   grid-row-gap: 0px;
 }
 
+ul.activites-list figure,
+ul.activites-list figure figcaption {
+  margin: 0;
+  padding: 0;
+}
+
+ul.activites-list li {
+  overflow: hidden;
+}
+
+ul.activites-list figure {
+  height: 100%;
+}
+
+ul.activites-list figure img {
+  height: 80%;
+  width: 100%;
+}
+
+ul.activites-list figure figcaption p {
+  padding: 15px;
+}
+
 .activites-marseille h2 {
   font-size: 24px;
   font-weight: 700;
@@ -268,6 +296,7 @@ figcaption p {
 
 .vieux-port img {
   width: 100%;
+  height: 90% !important;
   border-radius: 16px 16px 0 0;
 }
 
@@ -284,7 +313,6 @@ figcaption p {
   margin-right: 34px;
   background-color: orange;
   width: 300px;
-
   border-radius: 16px;
   margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
@@ -309,6 +337,10 @@ figcaption p {
   margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
   grid-area: 1 / 3 / 3 / 4;
+}
+
+.notre-dame img {
+  height: 90% !important;
 }
 
 .parc {
@@ -337,6 +369,11 @@ figcaption p {
 }
 
 footer {
+  margin-top: 50px;
+  background: red;
+}
+
+footer .container-page {
   display: flex;
   justify-content: space-between;
   align-items: center;
