--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 body {
-  padding: 0 70px;
   font-family: "Raleway", sans-serif;
+}
+
+img {
+  object-fit: cover;
 }
 
 .container-page {
@@ -89,7 +92,7 @@ form.search i.fa {
 .container .hebergements {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
@@ -100,7 +103,6 @@ form.search i.fa {
   border-radius: 24px;
   grid-column: 1/3;
   grid-row: 1;
-  height: fit-content;
 }
 
 .container .hebergements-marseille h2 {
@@ -115,13 +117,12 @@ form.search i.fa {
 }
 
 .hebergement-item {
-  margin-right: 34px;
   background-color: white;
   padding: 4px;
   border-radius: 16px;
-  width: 300px;
+  margin-bottom: 55px;
+  width: 250px;
   height: auto;
-  margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgba(14, 21, 28, 0.03),
     1px 4px 16px rgba(14, 21, 28, 0.05);
 }
@@ -136,21 +137,21 @@ form.search i.fa {
 }
 
 .hebergements-marseille a {
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 700;
-  margin-left: 50px;
   cursor: pointer;
   text-decoration: none;
   color: black;
 }
 
 figcaption h4 {
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 700;
   margin-bottom: 8px;
 }
 
 figcaption p {
+  font-size: 14px;
   font-weight: 500;
   margin-bottom: 8px;
 }
@@ -225,13 +226,10 @@ figcaption p {
   border-radius: 16px 0 0 16px;
 }
 
-.populaire-item figcaption {
-  margin-left: 32px;
-}
-
 .populaire-item figcaption h4 {
   margin-bottom: 8px;
-  font-size: 20px;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .populaire-item figcaption p {
@@ -245,11 +243,12 @@ figcaption p {
 
 .activites-marseille {
   height: 600px;
+  margin-top: 50px;
 }
 
 .activites-list {
   display: grid;
-  grid-template-columns: repeat(4, 450px);
+  grid-template-columns: repeat(4, 367px);
   grid-template-rows: repeat(2, 300px);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
@@ -276,6 +275,8 @@ ul.activites-list figure img {
 
 ul.activites-list figure figcaption p {
   padding: 15px;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 .activites-marseille h2 {
@@ -286,7 +287,7 @@ ul.activites-list figure figcaption p {
 
 .vieux-port {
   margin-right: 34px;
-  background-color: red;
+  background-color: white;
   width: 300px;
   border-radius: 16px;
   margin-bottom: 48px;
@@ -301,7 +302,7 @@ ul.activites-list figure figcaption p {
 }
 
 .fort {
-  background-color: blue;
+  background-color: white;
   width: 300px;
   margin-bottom: 48px !important;
   border-radius: 16px;
@@ -311,7 +312,7 @@ ul.activites-list figure figcaption p {
 
 .iles {
   margin-right: 34px;
-  background-color: orange;
+  background-color: white;
   width: 300px;
   border-radius: 16px;
   margin-bottom: 48px;
@@ -331,7 +332,7 @@ ul.activites-list figure figcaption p {
 
 .notre-dame {
   margin-right: 34px;
-  background-color: yellow;
+  background-color: white;
   width: 300px;
   border-radius: 16px;
   margin-bottom: 48px;
@@ -345,7 +346,7 @@ ul.activites-list figure figcaption p {
 
 .parc {
   margin-right: 34px;
-  background-color: purple;
+  background-color: white;
   width: 300px;
   border-radius: 16px;
   margin-bottom: 48px;
@@ -355,7 +356,7 @@ ul.activites-list figure figcaption p {
 
 .calanques {
   margin-right: 34px;
-  background-color: green;
+  background-color: white;
   width: 300px;
   border-radius: 16px;
   margin-bottom: 48px;
@@ -370,13 +371,28 @@ ul.activites-list figure figcaption p {
 
 footer {
   margin-top: 50px;
-  background: red;
+  background: #f2f2f2;
+  padding: 50px 0;
 }
 
 footer .container-page {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+}
+
+footer h4 {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+footer .footer-link {
+  margin-bottom: 16px;
+}
+
+footer a {
+  text-decoration: none;
+  color: black;
 }
 
 .filters {
@@ -418,4 +434,13 @@ li.filter-item i {
   justify-content: center;
   margin-left: -10px;
   color: #086afc;
+}
+
+@media screen and (max-width: 599px) {
+  html {
+    width: 599px !important;
+  }
+  .container-page {
+    width: 100% !important;
+  }
 }
