--- a/index.css
+++ b/index.css
@@ -441,6 +441,9 @@ li.filter-item i {
 }
 
 @media (max-width: 599px) {
+  html {
+    padding: 20px;
+  }
   .container-page {
     width: 100% !important;
   }
@@ -480,18 +483,61 @@ li.filter-item i {
   }
 
   .hero h2 {
-    font-size: 22px;
+    font-size: 18px;
   }
 
   .hero p {
-    margin-top: 16px !important;
+    font-size: 12px;
   }
 
   .search .input-text {
-    width: 40% !important;
+    width: 35% !important;
   }
 
   .filters h3 {
     font-size: 16px;
+  }
+
+  .filters {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .filters h3 {
+    margin-bottom: 10px;
+  }
+
+  ul.filter-items {
+    flex-wrap: wrap;
+  }
+
+  li.filter-item {
+    margin-bottom: 16px;
+  }
+  li.filter-item i {
+    width: 40px;
+    height: 40px;
+  }
+
+  .nb-logement p {
+    font-size: 14px;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .plus-populaires header h2 {
+    font-size: 18px;
+  }
+
+  .plus-populaires header {
+    align-items: flex-start;
+  }
+  .plus-populaires header i.fa {
+    width: 30px;
+    height: 30px;
   }
 }
