--- a/index.css
+++ b/index.css
@@ -19,15 +19,41 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 30px;
 }
 
 .link-header {
   display: flex;
+  justify-content: space-between;
+  width: 350px;
 }
 
-.hebergement-link {
+.hebergement-link,
+.activite {
+  position: relative;
+}
+
+.hebergement-link:hover,
+.activite:hover {
   color: #0065fc;
   cursor: pointer;
+}
+
+.hebergement-link:hover::before,
+.activite:hover::before {
+  content: "";
+  display: inline-block;
+  height: 3px;
+  width: 140%;
+  background: #0065fc;
+  position: absolute;
+  top: -45px;
+  left: -22px;
+}
+
+.activite:hover::before {
+  width: 200%;
+  left: -24px;
 }
 
 .hero {
@@ -161,12 +187,12 @@ figcaption p {
 }
 
 .activite {
-  margin-left: 30px;
+  /* margin-left: 30px; */
   cursor: pointer;
 }
 
 .signup {
-  margin-left: 30px;
+  /* margin-left: 30px; */
   color: #0065fc;
   font-weight: 700;
   cursor: pointer;
@@ -242,6 +268,7 @@ figcaption p {
 }
 
 .activites-marseille {
+  /* height: 600px; */
   margin-top: 50px;
 }
 
@@ -443,16 +470,15 @@ li.filter-item i {
   .container-page {
     width: 100% !important;
   }
-
   .activite {
     display: none;
   }
   .hebergement-link {
     display: none;
   }
-  .nav-responsive {
-    display: flex !important;
-    align-items: center;
+  .header-page {
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .hebergement-link-mobile {
     background-color: white;
@@ -463,50 +489,46 @@ li.filter-item i {
     font-size: 16px;
     border-bottom: 3px solid #0065fc;
   }
-
   .activite-link-mobile {
     background-color: white;
     border: none;
-
     margin-top: 20px;
     width: 50%;
     font-size: 16px;
   }
-
   .activite-link-mobile:active {
     border-bottom: 3px solid #0065fc;
     color: #0065fc;
   }
 
+  .hero {
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+  }
+
   .hero h2 {
     font-size: 18px;
   }
-
   .hero p {
     font-size: 12px;
   }
-
   .search .input-text {
     width: 35% !important;
   }
-
   .filters h3 {
     font-size: 16px;
   }
-
   .filters {
     flex-direction: column;
     align-items: flex-start;
   }
-
   .filters h3 {
     margin-bottom: 10px;
   }
-
   ul.filter-items {
     flex-wrap: wrap;
   }
-
   li.filter-item {
     margin-bottom: 16px;
   }
@@ -514,25 +536,24 @@ li.filter-item i {
     width: 40px;
     height: 40px;
   }
-
   .nb-logement p {
     font-size: 14px;
   }
-
   .container {
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
   }
-
   .plus-populaires {
     border-radius: 0 !important;
-    padding: 38px 56px;
+    padding-top: 38px;
+    padding-right: 20px;
+    padding-left: 20px;
+    box-sizing: border-box;
   }
   .plus-populaires header h2 {
     font-size: 18px;
   }
-
   .plus-populaires header {
     align-items: flex-start;
   }
@@ -540,25 +561,20 @@ li.filter-item i {
     width: 30px;
     height: 30px;
   }
-
   .populaires {
     width: 148px;
     height: 148px;
   }
-
   .populaire-item figcaption h4 {
     font-size: 14px;
   }
-
   .populaire-item {
     margin-bottom: 14px;
   }
-
   .container .hebergements-marseille {
     background-color: white;
     padding: 0;
   }
-
   .hebergement-item {
     width: 300px;
     margin-bottom: 10px;
@@ -581,7 +597,6 @@ li.filter-item i {
     height: 200px;
     margin-right: 0;
   }
-
   .iles {
     margin-right: 0;
     height: 200px;
@@ -597,12 +612,10 @@ li.filter-item i {
   .notre-dame img {
     height: 80% !important;
   }
-
   .parc {
     margin-right: 0;
     height: 200px;
   }
-
   footer .container-page {
     display: flex;
     flex-direction: column;
