--- a/index.css
+++ b/index.css
@@ -85,10 +85,11 @@ form.search i.fa {
   border: none;
   border-radius: 0 8px 8px 0;
   cursor: pointer;
+  margin-left: -3px;
 }
 
 .search .input-text {
-  padding: 6px 16px;
+  padding: 7px 16px;
   border: solid 2px #f5f5f5;
   font-weight: 700;
   margin-left: -4px;
@@ -462,7 +463,7 @@ li.filter-item i {
   color: #086afc;
 }
 
-.nav-responsive {
+.responsive-button {
   display: none;
 }
 
@@ -471,10 +472,18 @@ li.filter-item i {
     display: none;
   }
 
+  .search {
+    display: flex;
+    align-items: center;
+  }
+
   .responsive-button {
-    height: 29px;
+    height: 31px;
     color: red;
     background-color: #0065fc;
+    display: block;
+    border: none;
+    margin-left: 0;
   }
 
   .container-page {
