--- a/index.css
+++ b/index.css
@@ -28,6 +28,15 @@ header {
   width: 350px;
 }
 
+.link-header a {
+  color: black;
+  text-decoration: none;
+}
+
+.link-header a.signup {
+  color: #0065fc;
+}
+
 .hebergement-link,
 .activite {
   position: relative;
@@ -69,7 +78,7 @@ header {
   margin-bottom: 24px;
 }
 
-form.search i.fa {
+form.search i.fa-map-marker-alt {
   background: #f2f2f2;
   width: 40px;
   height: 31px;
@@ -251,6 +260,10 @@ figcaption p {
 
 .populaire-item figure img {
   border-radius: 16px 0 0 16px;
+}
+
+.populaire-item figcaption {
+  padding-left: 10px;
 }
 
 .populaire-item figcaption h4 {
@@ -471,19 +484,16 @@ li.filter-item i {
   .button {
     display: none;
   }
-
   .header-page {
     display: block;
     flex-direction: column;
     position: relative;
   }
-
   .link-header {
     margin-top: 11px;
     width: 100%;
     justify-content: space-around;
   }
-
   .hebergement-link::after {
     content: "";
     display: inline-block;
@@ -494,11 +504,9 @@ li.filter-item i {
     bottom: -15px;
     left: -63px;
   }
-
   .hebergement-link:hover {
     color: #0065fc;
   }
-
   .hebergement-link:hover::after {
     content: "";
     display: inline-block;
@@ -509,7 +517,6 @@ li.filter-item i {
     bottom: -15px;
     left: -63px;
   }
-
   .activite::after {
     content: "";
     display: inline-block;
@@ -520,11 +527,9 @@ li.filter-item i {
     bottom: -15px;
     left: -59px;
   }
-
   .activite:hover {
     color: #0065fc;
   }
-
   .activite:hover::after {
     content: "";
     display: inline-block;
@@ -535,24 +540,20 @@ li.filter-item i {
     bottom: -15px;
     left: -59px;
   }
-
   .hebergement-link:hover::before,
   .activite:hover::before {
     display: none;
   }
-
   .signup {
     position: absolute;
     top: 50px;
     right: 20px;
   }
-
   .search {
     display: flex;
     align-items: center;
     padding-top: 20px;
   }
-
   form.search i.fa {
     width: 70px;
     height: 50px;
@@ -560,21 +561,18 @@ li.filter-item i {
     align-items: center;
     justify-content: center;
   }
-
   .responsive-button {
+    color: white;
     height: 50px;
-    color: red;
     background-color: #0065fc;
     display: block;
     border: none;
     margin-left: -15px;
     border-radius: 8px;
   }
-
   .container-page {
     width: 100% !important;
   }
-
   .header-page {
     padding-left: 20px;
     padding-right: 20px;
@@ -588,7 +586,6 @@ li.filter-item i {
     font-size: 16px;
     border-bottom: 3px solid #0065fc;
   }
-
   .activite-link-mobile {
     background-color: white;
     border: none;
@@ -600,13 +597,11 @@ li.filter-item i {
     border-bottom: 3px solid #0065fc;
     color: #0065fc;
   }
-
   .hero {
     padding-left: 20px;
     padding-right: 20px;
     box-sizing: border-box;
   }
-
   .hero h2 {
     font-size: 18px;
     padding-top: 20px;
@@ -669,11 +664,9 @@ li.filter-item i {
   .populaire-item figcaption h4 {
     font-size: 14px;
   }
-
   .populaire-item figcaption {
     margin-left: 20px;
   }
-
   .populaire-item {
     margin-bottom: 14px;
   }
@@ -691,21 +684,17 @@ li.filter-item i {
     font-size: 18px;
     margin-left: 15px;
   }
-
   .hebergements-marseille h2 {
     padding-left: 20px;
   }
-
   .activites-list {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-
   .activites-marseille h2 {
     padding-left: 20px;
   }
-
   .vieux-port {
     width: 300px;
     height: auto;
