--- a/index.css
+++ b/index.css
@@ -15,6 +15,11 @@ ul {
   list-style: none;
 }
 
+ul li:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -135,7 +140,6 @@ form.search i.fa-map-marker-alt {
 .container .hebergements-marseille {
   background-color: #f2f2f2;
   padding: 40px 44px;
-  padding-right: 0 !important;
   border-radius: 24px;
   grid-column: 1/3;
   grid-row: 1;
@@ -157,7 +161,7 @@ form.search i.fa-map-marker-alt {
   padding: 4px;
   border-radius: 16px;
   margin-bottom: 55px;
-  width: 250px;
+  width: 30%;
   height: auto;
   box-shadow: 0px 0px 4px rgba(14, 21, 28, 0.03),
     1px 4px 16px rgba(14, 21, 28, 0.05);
@@ -219,10 +223,16 @@ figcaption p {
   height: 133px;
 }
 
+.populaires-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 90%;
+}
+
 .plus-populaires {
   background-color: #f2f2f2;
   padding: 38px 44px;
-  padding-bottom: 0;
   border-radius: 24px;
 }
 
@@ -288,9 +298,9 @@ figcaption p {
 
 .activites-list {
   display: grid;
-  grid-template-columns: repeat(4, 367px);
+  grid-template-columns: repeat(4, 327px);
   grid-template-rows: repeat(2, 300px);
-  grid-column-gap: 0px;
+  grid-column-gap: 2rem;
   grid-row-gap: 0px;
 }
 
@@ -328,7 +338,7 @@ ul.activites-list figure figcaption p {
 .vieux-port {
   margin-right: 34px;
   background-color: white;
-  width: 300px;
+  width: 100%;
   border-radius: 16px;
   margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
@@ -343,7 +353,7 @@ ul.activites-list figure figcaption p {
 
 .fort {
   background-color: white;
-  width: 300px;
+  width: 100%;
   margin-bottom: 48px !important;
   border-radius: 16px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
@@ -353,7 +363,7 @@ ul.activites-list figure figcaption p {
 .iles {
   margin-right: 34px;
   background-color: white;
-  width: 300px;
+  width: 100%;
   border-radius: 16px;
   margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
@@ -373,7 +383,7 @@ ul.activites-list figure figcaption p {
 .notre-dame {
   margin-right: 34px;
   background-color: white;
-  width: 300px;
+  width: 100%;
   border-radius: 16px;
   margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
@@ -387,7 +397,7 @@ ul.activites-list figure figcaption p {
 .parc {
   margin-right: 34px;
   background-color: white;
-  width: 300px;
+  width: 100%;
   border-radius: 16px;
   margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
@@ -397,7 +407,7 @@ ul.activites-list figure figcaption p {
 .calanques {
   margin-right: 34px;
   background-color: white;
-  width: 300px;
+  width: 100%;
   border-radius: 16px;
   margin-bottom: 48px;
   box-shadow: 0px 0px 4px rgb(14 21 28 / 3%), 1px 4px 16px rgb(14 21 28 / 5%);
@@ -485,7 +495,104 @@ li.filter-item i {
   display: none;
 }
 
-@media (max-width: 599px) {
+@media (max-width: 1440px) {
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .populaires-list {
+    flex-direction: row;
+  }
+}
+@media (max-width: 1390px) {
+  .container-page {
+    margin: 0 20px;
+  }
+  .activites-list {
+    grid-template-columns: repeat(4, 300px);
+  }
+}
+
+@media (max-width: 1330px) {
+  .activites-list {
+    grid-template-columns: repeat(4, 300px);
+  }
+}
+
+@media (max-width: 1316px) {
+  .activites-list {
+    grid-template-columns: repeat(4, 285px);
+  }
+}
+
+@media (max-width: 1252px) {
+  .activites-list {
+    grid-template-columns: repeat(4, 265px);
+  }
+}
+
+@media (max-width: 1175px) {
+  .activites-list {
+    grid-template-columns: repeat(4, 245px);
+  }
+}
+
+@media (max-width: 1160px) {
+  .activites-list {
+    grid-template-columns: repeat(4, 230px);
+  }
+}
+
+@media (max-width: 1034px) {
+  .activites-list {
+    grid-template-columns: repeat(4, 216px);
+  }
+}
+
+@media (max-width: 1000px) {
+  .activites-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .vieux-port {
+    grid-area: 1 / 1 / 2 / 2;
+    height: 65%;
+    margin-bottom: 0 !important;
+  }
+
+  .fort {
+    grid-area: 1 / 2 / 2 / 3;
+    height: 65%;
+    margin-bottom: 0 !important;
+  }
+
+  .calanques {
+    grid-area: 1 / 3 / 2 / 4;
+    height: 65%;
+    margin-bottom: 0 !important;
+  }
+
+  .notre-dame {
+    grid-area: 2 / 1 / 3 / 2;
+    height: 65%;
+  }
+
+  .iles {
+    grid-area: 2 / 2 / 3 / 3;
+    height: 65%;
+  }
+
+  .parc {
+    grid-area: 2 / 3 / 3 / 4;
+    height: 65%;
+  }
+}
+
+@media (max-width: 700px) {
+  body {
+    overflow-x: hidden;
+  }
   .button {
     display: none;
   }
